Fix: readability home title

--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,7 @@ section a {
 .home-title {
     font-size: 4em;
     font-weight: 400;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); /* Subtle shadow for better readability */
 }
 
 .home-text {
